--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,34 @@
+<!DOCTYPE html>
+
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
 
     <title>chat app</title>
 
   </head>
   <body>
     <p>Welcome to chat app</p>
+
+
+      <script src="/socket.io/socket.io.js/"></script>
+
+      <script>
+     var socket = io();
+
+     socket.on('connect', () => {
+
+       console.log('connected to the server');
+
+     });
+    socket.on('disconnect', () => {
+
+      console.log('disconnect from the server');
+
+    });
+
+     </script>
+
 
   </body>
 </html>
